# near-sdk-deploy-M20

./: README.md  README_EN.md  claude.md  guide.md  imgui.ini
src/M20_sdk_deploy/: CMakeLists.txt  main.cpp  package.xml
src/M20_sdk_deploy/config/glim/M20_A/: config_global_mapping_gpu.json  config_odometry.json  config_preprocess.json  config_ros.json
src/M20_sdk_deploy/config/glim/M20_B/: config_global_mapping_gpu.json  config_ros.json  config_sensors.json
src/M20_sdk_deploy/interface/robot/hardware/: dds_interface.hpp  m20_interface.hpp
src/M20_sdk_deploy/interface/robot/simulation/: gazebo_controller_ros2.py  mujoco_simulation_ros2.py
src/M20_sdk_deploy/launch/: gazebo.launch.py  gazebo_multi_robot.launch.py  gazebo_multi_robot_slam.launch.py  glim_slam.launch.py
src/M20_sdk_deploy/model/Depot_simple/: model.config  model.sdf
src/M20_sdk_deploy/model/Edifice_simple/: edifice_simple.sdf
src/M20_sdk_deploy/model/M20_urdf/urdf/: M20.sdf
src/M20_sdk_deploy/scripts/: pointcloud_merger.py
