<?xml version="1.0"?>
<package format="3">
  <name>rl_deploy</name>
  <version>1.0.0</version>
  <description>RL deploy</description>
  <maintainer email="pengbo@deeprobotics.cn">Bo (Percy) Peng</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>drdds</depend>
  <depend>libevdev-dev</depend>
  <depend>ros_gz_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>slam_toolbox</depend>

  <exec_depend>ament_cmake</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
